syntax = "proto3";
package xion.dkim.v1;

import "cosmos/msg/v1/msg.proto";
import "xion/dkim/v1/genesis.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/burnt-labs/xion/x/dkim/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a governance operation for updating the parameters.
  //
  // Since: cosmos-sdk 0.47
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // AddDkimPubKey defines a message to add a DKIM public key.
  rpc AddDkimPubKey(MsgAddDkimPubKey) returns (MsgAddDkimPubKeyResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address of the governance account.
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {}

// MsgAddDkimPubKey is the Msg/AddDkimPubKey request type.
message MsgAddDkimPubKey {
  option (cosmos.msg.v1.signer) = "authority";

  // authority is the address of the governance account.
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // domain is the domain of the DKIM public key.
  string domain = 2;

  // pub_key is the public key to add.
  string pub_key = 3;
}

// MsgAddDkimPubKeyResponse defines the response structure for executing a
// MsgAddDkimPubKey message.
message MsgAddDkimPubKeyResponse {}
